--- a/Road Capture/Road Capture/Base.lproj/Main.storyboard
+++ b/Road Capture/Road Capture/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1Qe-Ee-HpC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1Qe-Ee-HpC">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -179,18 +179,7 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <items>
-                                    <navigationItem id="Uxo-ru-CBx">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="prT-j6-aR3">
-                                            <connections>
-                                                <action selector="editButton:" destination="WOH-wg-Efl" id="eaN-Ec-h9z"/>
-                                            </connections>
-                                        </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" title="Upload" id="aQF-rR-pJh">
-                                            <connections>
-                                                <action selector="uploadButton:" destination="WOH-wg-Efl" id="z9z-qS-DgY"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
+                                    <navigationItem id="Uxo-ru-CBx"/>
                                 </items>
                             </navigationBar>
                         </subviews>
@@ -209,7 +198,7 @@
                     <tabBarItem key="tabBarItem" title="Gallery" image="galleryTab" id="v7h-FM-MTG"/>
                     <connections>
                         <outlet property="collectionView" destination="vC7-78-wjX" id="jac-XC-IgK"/>
-                        <outlet property="editButton" destination="prT-j6-aR3" id="KdJ-oj-Llj"/>
+                        <outlet property="navigationBar" destination="c0p-Im-xP5" id="AI1-z6-Hym"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GHQ-hF-oqD" userLabel="First Responder" sceneMemberID="firstResponder"/>
